--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* general */
 * {
     margin: 0;
     padding: 0;
@@ -5,12 +6,15 @@
 }
 
 body {
-    /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
 }
 
-/* apply styles to <header> */
+section {
+    padding: 60px;
+}
+
+/* header style start */
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -47,22 +51,25 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 1.55vw;
 }
+/* header style end */
 
+/* footer style start */
 footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
@@ -70,30 +77,25 @@ footer div {
 footer a {
     color: #024e76;
 }
+/* footer style end */
 
-section {
-    padding: 60px;
-}
-
-/* Hero Style Start */
+/* hero style start */
 .hero {
     background-image: url("../images/hero-bg.jpg");
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
-/* Hero Style End */
 .hero-form {
     border: 3px solid #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     color: #024e76;
-    position: absolute;
-    bottom: 140px;
-    right: 125px;
+    width: 40%;
+    margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -125,6 +127,22 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
+
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+}
+/* hero style end */
 
 .intro {
     text-align: center;
