--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,24 @@ section {
     padding: 60px;
 }
 
+.section-title {
+    font-size: 55px;
+    color: #024e76;
+    border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+
 /* header style start */
 header {
     padding: 20px 35px;
@@ -144,39 +162,22 @@ footer a {
 }
 /* hero style end */
 
-.intro {
-    text-align: center;
-}
-
+/* what we do section style start */
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
-}
-
-.steps {
     text-align: center;
+}
+/* what we do section style end */
+
+/* what you do section style start */
+.steps {
     background: #fce138;
 }
 
-.section-title {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
-}
-
-.primary-border {
-    border-color: #fce138;
-}
-
-.secondary-border {
-    border-color: #39a6b2;
-}
 
 .steps div {
     margin-bottom: 80px;
@@ -201,9 +202,11 @@ footer a {
 .steps span {
     font-size: 38px;
 }
+/* what you do section style end */
 
+/* meet the trainers section style start */
 .trainers {
-    text-align: center;
+
 }
 
 .trainer{
@@ -248,10 +251,10 @@ footer a {
     font-size: 17px;
     line-height: 1.3;
 }
+/* meet the trainers section style end */
 
 /* reach out styles start */
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
@@ -288,5 +291,8 @@ footer a {
 .contact-info a {
     color: #fce138;
 }
-
 /* reach out styles end*/
+
+.flex-row {
+    display: flex;
+}
